Archive2/19/3e507cefdb6ec0/output
+ clang++ -std=c++11 -O3 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter -stdlib=libc++ -pthread main.cpp -lsupc++
+ ./a.out
+ g++-4.9 -std=c++11 -O3 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter -pthread -Wconversion main.cpp
main.cpp: In function 'int main()':
main.cpp:6:36: error: use of deleted function 'std::basic_fstream<char>::basic_fstream(const std::basic_fstream<char>&)'
     auto f = std::fstream{"foo.bar"};
                                    ^
In file included from main.cpp:2:0:
/usr/local/include/c++/4.9.2/fstream:779:11: note: 'std::basic_fstream<char>::basic_fstream(const std::basic_fstream<char>&)' is implicitly deleted because the default definition would be ill-formed:
     class basic_fstream : public basic_iostream<_CharT, _Traits>
           ^
/usr/local/include/c++/4.9.2/fstream:779:11: error: use of deleted function 'std::basic_iostream<char>::basic_iostream(const std::basic_iostream<char>&)'
In file included from /usr/local/include/c++/4.9.2/fstream:38:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/istream:795:11: note: 'std::basic_iostream<char>::basic_iostream(const std::basic_iostream<char>&)' is implicitly deleted because the default definition would be ill-formed:
     class basic_iostream
           ^
/usr/local/include/c++/4.9.2/istream:795:11: error: use of deleted function 'std::basic_istream<char>::basic_istream(const std::basic_istream<char>&)'
/usr/local/include/c++/4.9.2/istream:58:11: note: 'std::basic_istream<char>::basic_istream(const std::basic_istream<char>&)' is implicitly deleted because the default definition would be ill-formed:
     class basic_istream : virtual public basic_ios<_CharT, _Traits>
           ^
/usr/local/include/c++/4.9.2/istream:58:11: error: use of deleted function 'std::basic_ios<char>::basic_ios(const std::basic_ios<char>&)'
In file included from /usr/local/include/c++/4.9.2/ios:44:0,
                 from /usr/local/include/c++/4.9.2/istream:38,
                 from /usr/local/include/c++/4.9.2/fstream:38,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/bits/basic_ios.h:66:11: note: 'std::basic_ios<char>::basic_ios(const std::basic_ios<char>&)' is implicitly deleted because the default definition would be ill-formed:
     class basic_ios : public ios_base
           ^
In file included from /usr/local/include/c++/4.9.2/ios:42:0,
                 from /usr/local/include/c++/4.9.2/istream:38,
                 from /usr/local/include/c++/4.9.2/fstream:38,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/bits/ios_base.h:786:5: error: 'std::ios_base::ios_base(const std::ios_base&)' is private
     ios_base(const ios_base&);
     ^
In file included from /usr/local/include/c++/4.9.2/ios:44:0,
                 from /usr/local/include/c++/4.9.2/istream:38,
                 from /usr/local/include/c++/4.9.2/fstream:38,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/bits/basic_ios.h:66:11: error: within this context
     class basic_ios : public ios_base
           ^
In file included from /usr/local/include/c++/4.9.2/fstream:38:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/istream:795:11: error: use of deleted function 'std::basic_ostream<char>::basic_ostream(const std::basic_ostream<char>&)'
     class basic_iostream
           ^
In file included from /usr/local/include/c++/4.9.2/istream:39:0,
                 from /usr/local/include/c++/4.9.2/fstream:38,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/ostream:58:11: note: 'std::basic_ostream<char>::basic_ostream(const std::basic_ostream<char>&)' is implicitly deleted because the default definition would be ill-formed:
     class basic_ostream : virtual public basic_ios<_CharT, _Traits>
           ^
/usr/local/include/c++/4.9.2/ostream:58:11: error: use of deleted function 'std::basic_ios<char>::basic_ios(const std::basic_ios<char>&)'
In file included from /usr/local/include/c++/4.9.2/fstream:38:0,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/istream:795:11: error: use of deleted function 'std::basic_ios<char>::basic_ios(const std::basic_ios<char>&)'
     class basic_iostream
           ^
In file included from main.cpp:2:0:
/usr/local/include/c++/4.9.2/fstream:779:11: error: use of deleted function 'std::basic_ios<char>::basic_ios(const std::basic_ios<char>&)'
     class basic_fstream : public basic_iostream<_CharT, _Traits>
           ^
/usr/local/include/c++/4.9.2/fstream:779:11: error: use of deleted function 'std::basic_filebuf<char>::basic_filebuf(const std::basic_filebuf<char>&)'
/usr/local/include/c++/4.9.2/fstream:72:11: note: 'std::basic_filebuf<char>::basic_filebuf(const std::basic_filebuf<char>&)' is implicitly deleted because the default definition would be ill-formed:
     class basic_filebuf : public basic_streambuf<_CharT, _Traits>
           ^
In file included from /usr/local/include/c++/4.9.2/ios:43:0,
                 from /usr/local/include/c++/4.9.2/istream:38,
                 from /usr/local/include/c++/4.9.2/fstream:38,
                 from main.cpp:2:
/usr/local/include/c++/4.9.2/streambuf:802:7: error: 'std::basic_streambuf<_CharT, _Traits>::basic_streambuf(const std::basic_streambuf<_CharT, _Traits>&) [with _CharT = char; _Traits = std::char_traits<char>]' is private
       basic_streambuf(const basic_streambuf& __sb)
       ^
In file included from main.cpp:2:0:
/usr/local/include/c++/4.9.2/fstream:72:11: error: within this context
     class basic_filebuf : public basic_streambuf<_CharT, _Traits>
           ^
